<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.fragments.menu.TopMenuHorizontal.TopMenuHorizontalFragment">

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scrollPizza"
                android:gravity="center"
                android:layout_margin="@dimen/_3dp"
                android:paddingStart="@dimen/_22dp"
                android:paddingEnd="@dimen/_22dp"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:layout_width="@dimen/_88dp"
                android:background="@color/lightGray"
                android:textColor="@color/gray"
                android:layout_height="@dimen/_32dp"
                android:text="@string/Пицца"/>

            <TextView
                android:id="@+id/scrollCombo"
                android:gravity="center"
                android:layout_margin="@dimen/_3dp"
                android:paddingStart="@dimen/_22dp"
                android:paddingEnd="@dimen/_22dp"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:layout_width="@dimen/_88dp"
                android:background="@color/lightGray"
                android:textColor="@color/gray"
                android:layout_height="@dimen/_32dp"
                android:text="@string/Комбо"/>

            <TextView
                android:id="@+id/scrollCakes"
                android:gravity="center"
                android:layout_margin="@dimen/_3dp"
                android:paddingStart="@dimen/_22dp"
                android:paddingEnd="@dimen/_22dp"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:layout_width="wrap_content"
                android:background="@color/lightGray"
                android:textColor="@color/gray"
                android:layout_height="@dimen/_32dp"
                android:text="@string/Десерты"/>

            <TextView
                android:id="@+id/scrollDrinks"
                android:gravity="center"
                android:layout_margin="@dimen/_3dp"
                android:paddingStart="@dimen/_22dp"
                android:paddingEnd="@dimen/_22dp"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:layout_width="wrap_content"
                android:background="@color/lightGray"
                android:textColor="@color/gray"
                android:layout_height="@dimen/_32dp"
                android:text="@string/Напитки"/>

            <TextView
                android:id="@+id/scrollIceСream"
                android:gravity="center"
                android:layout_margin="@dimen/_3dp"
                android:paddingStart="@dimen/_22dp"
                android:paddingEnd="@dimen/_22dp"
                android:paddingTop="@dimen/_8dp"
                android:paddingBottom="@dimen/_8dp"
                android:layout_width="wrap_content"
                android:background="@color/lightGray"
                android:textColor="@color/gray"
                android:layout_height="@dimen/_32dp"
                android:text="@string/Мороженое"/>


        </LinearLayout>


    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>